--- a/src/main/res/layout/activity_work.xml
+++ b/src/main/res/layout/activity_work.xml
@@ -8,56 +8,55 @@
 
 
     <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/left_guideline"
-        app:layout_constraintGuide_percent=".0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        />
+        app:layout_constraintGuide_percent=".0" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/right_guideline"
-        app:layout_constraintGuide_percent=".80"
-        android:orientation="vertical"/>
-
-    <androidx.constraintlayout.widget.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".80" />
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/top_guideline"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".0"
-        />
-
-    <androidx.constraintlayout.widget.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".80"
-        android:id="@+id/bottom_guideline"/>
+        app:layout_constraintGuide_percent=".0" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/bottom_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".80" />
 
 
     <fyodor.likhachyov.gamebuilder.Field
+        android:id="@+id/field"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/colorGray"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
         app:layout_constraintLeft_toLeftOf="@id/left_guideline"
         app:layout_constraintRight_toRightOf="@+id/right_guideline"
-        app:layout_constraintTop_toTopOf="@+id/top_guideline"
-        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
-        />
+        app:layout_constraintTop_toTopOf="@+id/top_guideline" />
 
     <fyodor.likhachyov.gamebuilder.DashBoard
-        android:orientation="horizontal"
-        android:gravity="top"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:gravity="top"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="@id/right_guideline">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"/>
+            android:text="@string/app_name" />
     </fyodor.likhachyov.gamebuilder.DashBoard>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
